--- a/250817/“EM-Vortex”模式-250817-01.md
+++ b/250817/“EM-Vortex”模式-250817-01.md
@@ -4,6 +4,8 @@ A part of the TEPprojectTEP 项目的一部分
 
 created on 10/08/97 - ***JLN Labs***** - **last update on 10/08/97创建于 1997 年 8 月 10 日 - JLN 实验室 - 最后更新于 1997 年 8 月 10 日![emvtxgen.jpg](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-08/6a4775e1-1b48-46bc-96c7-9cb094084166.jpg)
 
+![emvtxdia.jpg](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-08/f06cf80b-66b3-454b-b728-b4d39c120337.jpg)
+
 
 ---
 
